using java 25.0.1